2011-11-30  Rodrigo Rivas Costa  <rodrigorivascosta@gmail.com>

	* tlssup.c (__dyn_tls_init): Reapply patch from 3105314.

	Thank you to Earnie for creating the patch file.

2011-11-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Clean up DIRENT errno handling; make it more POSIX conformant.

	* mingwex/dirent.c (errno): Never zero it; POSIX forbids this.
	(_tclosedir): Save errno at entry; restore it when no more files.
	(DIRENT_RETURN_NOTHING): New macro; define it; use it in functions
	with `void' return type, in place of the return arg when invoking...
	(DIRENT_REJECT): New macro; define it; use it in all functions, to
	set `errno' and bail out, on detection of an abnormal condition.
	[errno = EFAULT]: Do not assign as this; POSIX specifies...
	[errno = EBADF]: ...this instead.

2011-10-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Rationalise DIRENT structure layout; add dirent.d_type field.

	* include/dirent.h (struct dirent): Rearrange; add d_type field.
	Add extra padding fields between d_type and d_name, to represent a
	union with a _finddata_t struct, aligned at the d_type field.
	(struct _wdirent): Likewise, with _wfinddata_t aligned at d_type.
	(DT_REG, DT_DIR): New macros; define them to be equivalent to...
	(_A_NORMAL, _A_SUBDIR): ...these Microsoft attributes respectively.
	(DT_BLK, DT_CHR, DT_FIFO, DT_LNK, DT_SOCK): New macros; define them.
	They have little relevance on Win32, so don't use them, substitute...
	(DT_UNKNOWN): ...this new catch-all macro instead; define it.
	(struct __dirstream_t): Change declaration; replace by opaque union.
	(struct __wdirstream_t): Likewise.

	* mingwex/dirent.c (struct __dirstream_t): Redefine as union; map...
	(struct dirent, struct __dirstream_private_t): ...these to a common
	address; the latter encapsulates the private data into...
	(dd_private): ...this new member; update all references accordingly.
	Adjust field layout to align with corresponding dirent fields.